erDiagram
  APP_USER ||--|| PROFILE : "has"
  APP_USER ||--o{ PERK : "posts"
  PROFILE ||--o{ PROFILE_MEMBERSHIP : "has"

  APP_USER {
    BIGINT id PK
    VARCHAR email UNIQUE
    VARCHAR password
    BIGINT profile_id UNIQUE
  }

  PROFILE {
    BIGINT id PK
  }

  PROFILE_MEMBERSHIP {
    BIGINT profile_id
    VARCHAR membership
    PK profile_id membership
  }

  PERK {
    BIGINT id PK
    TEXT description
    VARCHAR membership
    VARCHAR product
    INT upvotes
    INT downvotes
    DATE start_date
    DATE end_date
    BIGINT posted_by_id
  }
